
    o	piechart() was defaulting to foreground colour (black) fills
	rather than background (as used in 1.3.1 and earlier).	Now
	background is used, but be aware that as from 1.4.0 this may
	be transparent.

    o	La.eigen(*, only.values=TRUE) does not segfault anymore in one
	branch (PR#1262).

    o	cut() now produces correct default labels even when
	include.lowest = TRUE (PR#1263).

    o	reformulate() properly works with a response.

    o	cmdscale(*, k = 1) now works properly.

    o	Options by = "month" and "year" to seq.POSIXt() will always
	take account of changes to/from daylight savings time: this
	was not working on some platforms.

    o	glm.fit.null() now accepts all the arguments of glm.fit() (it
	couild be called from glm.fit with arguments it did not
	accept), and is now documented.



		CHANGES IN R VERSION 1.4.0


USER-VISIBLE CHANGES

    [This is a new section to highlight changes in behaviour, which
    may be given in more detail in the following sections.
    Many bug fixes are also user-visible changes.]

    o	The default save format has been changed, so saved workspaces
	and objects cannot (by default) be read in earlier versions of R.

    o	The number of bins selected by default in a histogram uses
	the correct version of Sturges' formula and will usually be
	one larger.

    o	data.frame() no longer converts logical arguments to factors
	(following S4 rather than S3).

    o	read.table() has new arguments `nrows' and `colClasses'.  If the
	latter is NA (the default), conversion is attempted to
	logical, integer, numeric or complex, not just to numeric.

    o	model.matrix() treats logical variables as a factors with
	levels c(FALSE, TRUE) (rather than 0-1 valued numerical
	variables).  This makes R compatible with all S versions.

    o	Transparency is now supported on most graphics devices.
	This means that using par("bg"), for example in legend(), will
	by default give a transparent rather than opaque background.
