@@ -34,10 +34,9 @@ predict.glm <-
 	if(is.null(dispersion) || dispersion == 0)
 	    dispersion <- summary(object, dispersion=dispersion)$dispersion
 	residual.scale <- as.vector(sqrt(dispersion))
-	if ( missing(newdata) ) newdata <- model.frame(object)
 	pred <- predict.lm(object, newdata, se.fit, scale = residual.scale,
-                           type=ifelse(type=="link", "response", type),
-                           terms=terms)
+                           type = ifelse(type=="link", "response", type),
+                           terms = terms)
 	fit <- pred$fit
 	se.fit <- pred$se.fit
 	switch(type,
