@@ -200,11 +200,6 @@ glm.fit.null(x, y, weights = rep(1, nrow(x)),
   \code{\link{esoph}}, \code{\link{infert}} and
   \code{\link{predict.glm}} have examples of fitting binomial glms.
 }
-\note{
-  Offsets specified by \code{offset} will not be included in predictions
-  by \code{\link{predict.glm}}, whereas those specified by an offset term
-  in the formula will be.
-}
 \references{
   McCullagh P. and Nelder, J. A. (1989)
   \emph{Generalized Linear Models.}
@@ -215,7 +210,7 @@ glm.fit.null(x, y, weights = rep(1, nrow(x)),
   London: Chapman and Hall.
 
   Venables, W. N. and Ripley, B. D. (1999)
-  \emph{Modern Applied Statistics withe S-PLUS.}
+  \emph{Modern Applied Statistics with S-PLUS.}
   New York: Springer.
 }
 
