@@ -38,7 +38,7 @@ use Text::DelimMatch;
 ## don't buffer output
 $| = 1;
 
-my $revision = ' $Revision: 1.80 $ ';
+my $revision = ' $Revision: 1.81 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -481,7 +481,7 @@ sub check_pkg {
 	print RCMD "for(f in Rfiles)\n";
 	print RCMD "if(inherits(try(parse(f)), \"try-error\")) stop(f)\n";
         close RCMD;
-        system("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
+        Rsystem("${R_exe} ${R_opts} --quiet < ${Rcmd} > ${Rout}");
         my @out;
         open ROUT, "< $Rout";
         while(<ROUT>) {chomp; push(@out, $_);}
